# historical-fidelity-simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
audit/audit_1/: 01_audit_index.md  02_project_structure.md  03_documentation_status.md  04_test_coverage.md  05_dependency_management.md  06_examples_assessment.md
benchmarks/: performance_results_20250117_215845.json
docs/: architecture.md  dev-instructions.md  development_standards_and_project_goals.md  faq.md  getting_started.md  research-proposal.md  troubleshooting.md
docs/api/: README.md  simulator.md
docs/api/analysis/: README.md  critical_analysis.md
docs/api/classical/: README.md  dynamics.md  ising.md
docs/api/quantum/: README.md  evolution.md  operators.md
docs/api/utils/: README.md  gpu_accelerator.md  visualization.md
docs/benchmarks/: README.md
docs/theory/: README.md
examples/: README.md  convert_to_notebooks.py
examples/01_basic_usage/: getting_started.ipynb  getting_started.py
examples/02_parameter_sweeps/: README.md  field_strength_sweep.ipynb  field_strength_sweep.py  gpu_performance_comparison.py  information_planck_sweep.ipynb  information_planck_sweep.py  temperature_coupling_sweep.ipynb  temperature_coupling_sweep.py
examples/03_phase_transitions/: 01_critical_behavior.ipynb  01_critical_behavior.py
examples/04_classical_vs_quantum/: 01_fidelity_comparison.ipynb  01_fidelity_comparison.py
examples/notebooks/: master_guide.ipynb
examples/notebooks/01_basic_usage/: getting_started.ipynb
examples/notebooks/02_parameter_sweeps/: field_strength_sweep.ipynb  information_planck_sweep.ipynb  temperature_coupling_sweep.ipynb
examples/notebooks/03_phase_transitions/: critical_behavior.ipynb
examples/notebooks/04_classical_vs_quantum/: fidelity_comparison.ipynb
historical_fidelity_simulator/: __init__.py  simulator.py
historical_fidelity_simulator/analysis/: critical_analysis.py
historical_fidelity_simulator/benchmarks/: gpu_performance.py
historical_fidelity_simulator/classical/: __init__.py  dynamics.py
historical_fidelity_simulator/quantum/: README.md  __init__.py  evolution.py  operators.py
historical_fidelity_simulator/utils/: __init__.py  gpu_accelerator.py  visualization.py
scripts/: generate_quantum_figures.py  generate_theory_figures.py
src/historical_fidelity_simulator/: __init__.py
tests/: __init__.py  test_classical.py  test_quantum.py  test_simulator.py  test_visualization.py
(+11 files in other folders)
